// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayBreadcrumb calls callback when an item is clicked 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="breadcrumb-item active"
      >
        <a
          aria-current="page"
          class="breadcrumb-link"
          data-testid="testId1"
        >
          1
        </a>
      </li>
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-link"
          data-testid="testId2"
        >
          2
        </a>
      </li>
      <li
        class="dropdown breadcrumb-item"
      >
        <button
          aria-controls="clay-dropdown-menu-3"
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle breadcrumb-link btn btn-unstyled"
          data-testid="breadcrumbDropdownTrigger"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-ellipsis-h"
            role="presentation"
          >
            <use
              xlink:href="path/to/spritemap#ellipsis-h"
            />
          </svg>
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              xlink:href="path/to/spritemap#caret-bottom"
            />
          </svg>
        </button>
      </li>
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-link"
          data-testid="testId5"
        >
          5
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`ClayBreadcrumb renders 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="breadcrumb-item active"
      >
        <a
          aria-current="page"
          class="breadcrumb-link"
          data-testid="testId1"
          href="#1"
        >
          1
        </a>
      </li>
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-link"
          data-testid="testId2"
          href="#2"
        >
          2
        </a>
      </li>
      <li
        class="dropdown breadcrumb-item"
      >
        <button
          aria-controls="clay-dropdown-menu-1"
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle breadcrumb-link btn btn-unstyled"
          data-testid="breadcrumbDropdownTrigger"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-ellipsis-h"
            role="presentation"
          >
            <use
              xlink:href="path/to/spritemap#ellipsis-h"
            />
          </svg>
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              xlink:href="path/to/spritemap#caret-bottom"
            />
          </svg>
        </button>
      </li>
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-link"
          data-testid="testId5"
          href="#5"
        >
          5
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`ClayBreadcrumb renders with properties passed by \`ellipsisProps\` 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="breadcrumb-item active"
      >
        <a
          aria-current="page"
          class="breadcrumb-link"
          data-testid="testId1"
          href="#1"
        >
          1
        </a>
      </li>
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-link"
          data-testid="testId2"
          href="#2"
        >
          2
        </a>
      </li>
      <li
        class="dropdown breadcrumb-item"
        style="font-size: 15px;"
      >
        <button
          aria-controls="clay-dropdown-menu-2"
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle breadcrumb-link btn btn-unstyled"
          data-testid="breadcrumbDropdownTrigger"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-ellipsis-h"
            role="presentation"
          >
            <use
              xlink:href="path/to/spritemap#ellipsis-h"
            />
          </svg>
          <svg
            class="lexicon-icon lexicon-icon-caret-bottom"
            role="presentation"
          >
            <use
              xlink:href="path/to/spritemap#caret-bottom"
            />
          </svg>
        </button>
      </li>
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-link"
          data-testid="testId5"
          href="#5"
        >
          5
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`ClayBreadcrumb throws a warning when not passing \`active\` to any \`items\` 1`] = `
<div>
  <nav
    aria-label="Breadcrumb"
  >
    <ol
      class="breadcrumb"
    >
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-link"
          data-testid="testId1"
          href="#1"
        >
          1
        </a>
      </li>
      <li
        class="breadcrumb-item"
      >
        <a
          class="breadcrumb-link"
          data-testid="testId2"
          href="#2"
        >
          2
        </a>
      </li>
    </ol>
  </nav>
</div>
`;
